feat(aircraft): add aircraft management with FAA lookup, sorting, and filtering
- Add aircraft view with FAA registry integration and gear type inference
- Fix aircraft characteristics (HP, Complex, TAA) persistence from FAA lookup
- Implement simulator hours calculation using simulated_flight_time
- Add sorting by tail number, hours, and latest flight date
- Add filtering by category (rental, club, owned)
- Make all flight table columns sortable with visual indicators
- Display inline badges for category, characteristics, and data source

--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   frontend:
     build:
       context: ..
-      dockerfile: infrastructure/Dockerfile.frontend
+      dockerfile: infrastructure/Dockerfile.frontend-react
     ports:
       - "${APP_PORT:-8181}:80"
     depends_on:
