chore(syntx): fix pre-commit issues

--- a/infrastructure/.env.example
+++ b/infrastructure/.env.example
@@ -1,5 +1,6 @@
 # TrueHour Configuration
 # Copy this file to .env and customize for your deployment
+# IMPORTANT: Change POSTGRES_PASSWORD before deploying!
 
 # App Settings
 APP_PORT=8181
@@ -11,9 +12,17 @@ TIMEZONE=America/New_York
 ENABLE_FAA_LOOKUP=true
 
 # Database Configuration
-DATABASE_URL=postgresql://truehour:truehour@db:5432/truehour
+# SECURITY WARNING: Change these credentials before production deployment!
+POSTGRES_USER=truehour
+POSTGRES_PASSWORD=CHANGE_ME_BEFORE_PRODUCTION
+POSTGRES_DB=truehour
+
+# Database URL (update password to match POSTGRES_PASSWORD above)
+DATABASE_URL=postgresql://truehour:CHANGE_ME_BEFORE_PRODUCTION@db:5432/truehour
 
 # Security Notes:
-# - Change default passwords for production deployments
-# - Use environment-specific passwords for cloud deployments
+# - REQUIRED: Change POSTGRES_PASSWORD to a strong password (min 16 chars)
+# - Update DATABASE_URL password to match
 # - Never commit .env file to version control
+# - Use different passwords for dev/staging/production
+# - Consider using Docker secrets for production
