--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -35,7 +35,7 @@ jobs:
           python backend/scripts/update_faa_data.py backend/data/aircraft.db
 
       - name: Upload database artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: aircraft-database
           path: backend/data/aircraft.db
@@ -55,7 +55,7 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Download database artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: aircraft-database
           path: backend/data
@@ -95,7 +95,7 @@ jobs:
           touch "/tmp/digests-api/${digest#sha256:}"
 
       - name: Upload digest
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: digests-api-${{ steps.platform.outputs.name }}
           path: /tmp/digests-api/*
@@ -149,7 +149,7 @@ jobs:
           touch "/tmp/digests-frontend/${digest#sha256:}"
 
       - name: Upload digest
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: digests-frontend-${{ steps.platform.outputs.name }}
           path: /tmp/digests-frontend/*
@@ -162,7 +162,7 @@ jobs:
     needs: build-api
     steps:
       - name: Download digests
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           pattern: digests-api-*
           path: /tmp/digests-api
@@ -202,7 +202,7 @@ jobs:
     needs: build-frontend
     steps:
       - name: Download digests
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           pattern: digests-frontend-*
           path: /tmp/digests-frontend
@@ -236,10 +236,88 @@ jobs:
       - name: Inspect image
         run: docker buildx imagetools inspect ${{ env.FRONTEND_IMAGE }}:develop
 
+  smoke-test:
+    name: Smoke Tests
+    runs-on: ubuntu-latest
+    needs: [merge-api, merge-frontend]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v6
+
+      - name: Download database artifact
+        uses: actions/download-artifact@v7
+        with:
+          name: aircraft-database
+          path: backend/data
+
+      - name: Create test docker-compose
+        run: |
+          cat > docker-compose.test.yml << 'EOF'
+          services:
+            db:
+              image: postgres:18-alpine
+              environment:
+                POSTGRES_DB: truehour
+                POSTGRES_USER: truehour
+                POSTGRES_PASSWORD: truehour
+              healthcheck:
+                test: ["CMD-SHELL", "pg_isready -U truehour"]
+                interval: 5s
+                timeout: 5s
+                retries: 5
+              ports:
+                - "5432:5432"
+
+            api:
+              image: ${{ env.API_IMAGE }}:develop
+              environment:
+                DATABASE_URL: postgresql://truehour:truehour@db:5432/truehour
+                ENABLE_FAA_LOOKUP: "true"
+              depends_on:
+                db:
+                  condition: service_healthy
+              ports:
+                - "8000:8000"
+              healthcheck:
+                test: ["CMD-SHELL", "curl -f http://localhost:8000/api/v1/health || exit 1"]
+                interval: 10s
+                timeout: 5s
+                retries: 5
+                start_period: 10s
+          EOF
+
+      - name: Start services
+        run: |
+          docker compose -f docker-compose.test.yml up -d
+          echo "Waiting for services to be healthy..."
+          timeout 60 bash -c 'until docker compose -f docker-compose.test.yml ps | grep -q "healthy"; do sleep 2; done'
+
+      - name: Generate test data
+        run: |
+          chmod +x tests/generate_test_data.sh
+          API_BASE=http://localhost:8000 tests/generate_test_data.sh
+
+      - name: Run smoke tests
+        run: |
+          chmod +x tests/smoke_test.sh
+          API_BASE=http://localhost:8000 VERBOSE=true tests/smoke_test.sh
+
+      - name: Show container logs on failure
+        if: failure()
+        run: |
+          echo "=== API Logs ==="
+          docker compose -f docker-compose.test.yml logs api
+          echo "=== DB Logs ==="
+          docker compose -f docker-compose.test.yml logs db
+
+      - name: Cleanup
+        if: always()
+        run: docker compose -f docker-compose.test.yml down -v
+
   summary:
     name: Build Summary
     runs-on: ubuntu-latest
-    needs: [merge-api, merge-frontend]
+    needs: [merge-api, merge-frontend, smoke-test]
     steps:
       - name: Get metadata
         id: meta
