--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   frontend:
+    container_name: truehour-frontend
     build:
       context: ..
       dockerfile: infrastructure/Dockerfile.frontend-react
@@ -14,6 +15,7 @@ services:
       - .env
 
   api:
+    container_name: truehour-api
     build:
       context: ../backend
       dockerfile: Dockerfile
@@ -35,14 +37,15 @@ services:
       - .env
 
   db:
+    container_name: truehour-db
     image: postgres:18-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
-      - POSTGRES_USER=truehour
-      - POSTGRES_PASSWORD=truehour
-      - POSTGRES_DB=truehour
+      - POSTGRES_USER=${POSTGRES_USER:-truehour}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-truehour}
+      - POSTGRES_DB=${POSTGRES_DB:-truehour}
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U truehour"]
       interval: 5s
