fix: align pre-commit hooks with CI and update workflows for v2.0 React
- Enable ESLint and markdownlint in pre-commit hooks to match CI
- Fix all React 19 linting errors (Date.now() purity, cascading setState)
- Replace TypeScript 'any' types with proper types throughout codebase
- Fix markdown line length violations (160 char limit)
- Update all CI workflows to use Dockerfile.frontend-react instead of old v1.x paths
- Update build workflows to trigger on frontend-react/** instead of frontend/**
- Fix security-scan and sbom-generation workflows for v2.0 React frontend

--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -7,7 +7,7 @@ on:
       - develop
     paths:
       - 'backend/**'
-      - 'frontend/**'
+      - 'frontend-react/**'
       - 'infrastructure/**'
       - '.github/workflows/build-develop.yml'
 
@@ -136,7 +136,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: infrastructure/Dockerfile.frontend
+          file: infrastructure/Dockerfile.frontend-react
           platforms: ${{ matrix.platform }}
           outputs: type=image,name=${{ env.FRONTEND_IMAGE }},push-by-digest=true,name-canonical=true,push=true
           cache-from: type=gha,scope=frontend-develop-${{ steps.platform.outputs.name }}
