--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
     paths:
       - 'backend/**'
-      - 'frontend/**'
+      - 'frontend-react/**'
       - 'infrastructure/**'
   workflow_dispatch:
 
@@ -202,7 +202,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: infrastructure/Dockerfile.frontend
+          file: infrastructure/Dockerfile.frontend-react
           platforms: ${{ matrix.platform }}
           outputs: type=image,name=${{ env.FRONTEND_IMAGE }},push-by-digest=true,name-canonical=true,push=true
           cache-from: type=gha,scope=frontend-${{ steps.platform.outputs.name }}
