--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -65,7 +65,7 @@ jobs:
             --no-strict-optional \
             --warn-unused-ignores
 
-  # JavaScript/HTML linting
+  # React/TypeScript linting
   frontend-lint:
     name: Frontend Linting
     runs-on: ubuntu-latest
@@ -77,19 +77,20 @@ jobs:
         uses: actions/setup-node@v5
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend-react/package-lock.json
 
-      - name: Install HTMLHint
-        run: npm install -g htmlhint
+      - name: Install dependencies
+        working-directory: frontend-react
+        run: npm ci
 
-      - name: Lint HTML files
-        run: |
-          htmlhint frontend/**/*.html
+      - name: Run ESLint
+        working-directory: frontend-react
+        run: npm run lint
 
-      - name: Validate HTML
-        uses: Cyb3r-Jak3/html5validator-action@v8.0.0
-        with:
-          root: frontend/
-          format: text
+      - name: Run TypeScript type checking
+        working-directory: frontend-react
+        run: npx tsc --noEmit
 
   # Dockerfile linting
   dockerfile-lint:
@@ -109,7 +110,7 @@ jobs:
       - name: Lint frontend Dockerfile
         uses: hadolint/hadolint-action@v3.3.0
         with:
-          dockerfile: infrastructure/Dockerfile.frontend
+          dockerfile: infrastructure/Dockerfile.frontend-react
           failure-threshold: warning
           ignore: DL3008
 
@@ -208,7 +209,7 @@ jobs:
           echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
           echo "| Python (Black, isort, Flake8, Pylint, mypy) | \
           ${{ needs.python-lint.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Frontend (HTML, HTMLHint) | ${{ needs.frontend-lint.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Frontend (React, ESLint, TypeScript) | ${{ needs.frontend-lint.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Dockerfile (hadolint, Checkov) | ${{ needs.dockerfile-lint.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Docker Compose (validation, Checkov) | \
           ${{ needs.docker-compose-lint.result }} |" >> $GITHUB_STEP_SUMMARY
